--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,8 @@
 # pytest.ini or .pytest.ini
 [pytest]
 addopts = --html=reports/report.html
+log_cli=true
+log_level=INFO
+log_format = %(asctime)s %(levelname)s %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
+log_file = test.log
