--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 # pytest.ini or .pytest.ini
 [pytest]
-addopts = --html=reports/report.html
-log_cli=true
+addopts = --html=reports/report.html --browser=chrome --env=visual
+log_cli=false
 log_level=INFO
 log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
