update test names and README

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
-# pytest.ini or .pytest.ini
 [pytest]
 addopts = --html=reports/report.html --browser=chrome --env=visual
+markers = visual: mark a test as a visual test.
 log_cli=false
 log_level=INFO
 log_format = %(asctime)s %(levelname)s %(message)s
